kubernates_manifest/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-container
        image: public.ecr.aws/d8y1d3c0/spring-app:latest
        ports:
        - containerPort: 8080
